--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -1287,30 +1287,42 @@
                   <table class="table table-bordered bg-white">
                     <thead class="thead-dark">
                       <tr>
-                        <th scope="col"></th>
-                        <th scope="col">DATE</th>
-                        <th scope="col">AGENT</th>
-                        <th scope="col">CONTACT 1</th>
-                        <th scope="col">CONTACT 2</th>
-                        <th scope="col">VISIT TYPE</th>
-                        <th scope="col">REMARKS</th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 5%"></th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">DATE</th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">AGENT</th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">CONTACT 1</th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">CONTACT 2</th>
+                        <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">VISIT TYPE</th>
+                        <th scope="col" style="width: 45%">REMARKS</th>
                       </tr>
                     </thead>
                     <tr>
                       <%
                         var eventsList ='';
                         var k = 1;
+                        var repContact1 = [];
+                        var repContact2 = [];
                         for (i = 0; i < result.events.length; i++) {
                         k = i + 1;
-                          eventsList += '<th scope="row">' + k + '</th>';
+                        if (result.events[i].contact1 === null){
+                          repContact1.push("NA");
+                        } else{
+                          repContact1.push(result.events[i].contact1);
+                        }
+                        if (result.events[i].contact2 === null){
+                          repContact2.push("NA");
+                        } else{
+                          repContact2.push(result.events[i].contact2);
+                        }
+                          eventsList += '<th scope="row" style="text-align: center; vertical-align: middle; width: 5%">' + k + '</th>';
                           var str = result.events[i].eventTimeIn._i.toString();
                           var str = str.substr(0,10);
-                          eventsList += '<td>' + str + '</td>';
-                          eventsList += '<td>' + result.events[i].agentAbbrev + '</td>';
-                          eventsList += '<td>' + result.events[i].contact1 + '</td>';
-                          eventsList += '<td>' + result.events[i].contact2 + '</td>';
-                          eventsList += '<td>' + result.events[i].eventType + '</td>';
-                          eventsList += '<td>' + result.events[i].eventRemarks + '</td>';
+                          eventsList += '<td style="text-align: center; vertical-align: middle; width: 10%">' + str + '</td>';
+                          eventsList += '<td style="text-align: center; vertical-align: middle; width: 10%">' + result.events[i].agentAbbrev + '</td>';
+                          eventsList += '<td style="text-align: center; vertical-align: middle; width: 10%">' + repContact1[i] + '</td>';
+                          eventsList += '<td style="text-align: center; vertical-align: middle; width: 10%">' + repContact2[i] + '</td>';
+                          eventsList += '<td style="text-align: center; vertical-align: middle; width: 10%">' + result.events[i].eventType + '</td>';
+                          eventsList += '<td style="text-align: left; vertical-align: middle">' + result.events[i].eventRemarks + '</td>';
                           eventsList += '</tr>';
                       }
                       %>
