--- a/CRM/views/edit-users.ejs
+++ b/CRM/views/edit-users.ejs
@@ -29,6 +29,7 @@
         <h2>Edit User Accounts</h2>
         <hr>
         <form id="formEditContact" name="viewContact" method="post" action="/edit-user" >
+          
           <input type="name" class="form-control" id="userID" name="userID" value="<%= results[0]._id %>" hidden>
 
           <div class="form-row">
@@ -122,6 +123,55 @@
                 %>
                 <%- activeList %>
               </select>
+            </div>
+          </div>
+          <hr>
+          <div class="form-row">
+            <div class="col-12 col-md-6">
+              <div class="card bg-light border-dark" style="width: auto;">
+                <div class="card-header">
+                   Agent Details - if applicable
+                </div>
+                <div class="card-body">
+                  <!-- Agent Name-->
+                      <div class="form-row">
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="agentName">First Name</label>
+                          <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required disabled>
+                        </div>
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="agentName">Last Name</label>
+                          <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required disabled>
+                        </div>
+                        <div class="form-group col-12 col-md-auto">
+                          <label for="newAgentAbbrev">Agent Abbreviation</label>
+                          <input type="text" class="form-control" id="newAgentAbbrev" name="newAgentAbbrev" placeholder="Use All Caps" required disabled>
+                        </div>
+                      </div>
+
+                  <!-- User Position-->
+                  <div class="form-row">
+                      <div class="form-group col-12 col-md-auto">
+                        <label for="agentPosition">Position</label>
+                        <select class="form-control" id="agentPosition" name="agentPosition" required disabled>
+                        <option value="" disabled selected>Select</option>
+                        <option>Sales Executive</option>
+                        <option>Office</option>
+                        <option>Sales Manager</option>
+                      </select>
+                      </div>
+                  </div>
+
+
+                  <!-- Agent Phone Number-->
+                    <label for="agentPhopne">Agent Phone Number</label>
+                      <div class="form-row">
+                        <div class="form-group col-12 col-md-auto">
+                          <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number" disabled>
+                        </div>
+                    </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="row">
