--- a/CRM/views/edit-users.ejs
+++ b/CRM/views/edit-users.ejs
@@ -12,6 +12,38 @@
  <title>CRM - Edit User Account</title>
 
 </head>
+<script>
+  // Function to check Whether both passwords
+  // is same or not.
+  function checkPassword(form) {
+      password1 = form.newPassword.value;
+      password2 = form.newPasswordRetype.value;
+
+      // If Not same return False.
+      if (password1 != password2) {
+          alert ("\nPassword did not match: Please try again...")
+          return false;
+      }
+
+      // If same return True.
+      else{
+          return true;
+      }
+  }
+</script>
+<script>
+
+ window.onload = function() {
+   var agentType = "<%- locals.accounts[0].usertype %>";
+   if (agentType == "Agent") {
+    document.getElementById("agentAbbrev").disabled = false;
+   } else {
+    document.getElementById("agentAbbrev").disabled = true;
+   }
+
+ }
+ </script>
+
 <body class="c-app">
 
  <div class="c-sidebar c-sidebar-light c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
@@ -28,25 +60,27 @@
       <main class="main mt-0 mx-3">
         <h2>Edit User Accounts</h2>
         <hr>
-        <form id="formEditContact" name="viewContact" method="post" action="/edit-user" >
+        <form id="formEditContact" name="viewContact" method="post" action="/edit-user" onSubmit="return checkPassword(this)">
           
-          <input type="name" class="form-control" id="userID" name="userID" value="<%= results[0]._id %>" hidden>
+          <input type="name" class="form-control" id="userID" name="userID" value="<%= locals.accounts[0]._id %>" hidden>
+          <input type="name" class="form-control" id="origAgentAbbrev" name="origAgentAbbrev" value="<%= locals.accounts[0].agentAbbrev %>" hidden>
+
 
           <div class="form-row">
             <div class="form-group col-12 col-md-auto">
               <label for="userName">Username</label>
-              <input type="text" class="form-control" id="userName" name="userName" value = "<%= results[0].username %>" >
+              <input type="text" class="form-control" id="userName" name="userName" value = "<%= locals.accounts[0].username %>" >
             </div>
-            <div class="form-group col-12 col-md-auto">
+           <div class="form-group col-12 col-md-auto">
               <label for="userName">User Type</label>
-              <select class="form-control" id="userRole" name="userRole" required>
-                      <%
-                      var roleList = '';
-                      if(results[0].usertype == "Administrator"){
+              <select class="form-control" id="userRole" name="userRole" onchange = "EnableDisableBox(this)" required> required>
+                <%
+                  var roleList = '';
+                    if(locals.accounts[0].usertype == "Administrator"){
                       roleList += '<option selected>Administrator</option>';
                       roleList += '<option>Agent</option>';
                       roleList += '<option>ReadOnly</option>';
-                    } else if (results[0].usertype == "Agent"){
+                    } else if (locals.accounts[0].usertype == "Agent"){
                     roleList += '<option>Administrator</option>';
                     roleList += '<option selected>Agent</option>';
                     roleList += '<option>ReadOnly</option>';
@@ -60,36 +94,36 @@
               </select>
             </div>
             <div class="form-group col-12 col-md-auto">
-              <label for="agentAbbrev">Agent Abbreviation</label>
-              <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" required disabled>
+              <label for="agentAbbrev">Agent Abbreviation (Use All Caps)</label>
+              <input type="text" class="form-control" id="agentAbbrev" name="agentAbbrev" placeholder="Use All Caps" value = "<%= locals.accounts[0].agentAbbrev %>"required disabled>
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group col-12 col-md-auto">
               <label for="agentName">First Name</label>
-              <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" required>
+              <input type="text" class="form-control" id="agentFirstName" name="agentFirstName" placeholder="First Name" value = "<%= locals.accounts[0].agentFirstName %>" required>
             </div>
             <div class="form-group col-12 col-md-auto">
               <label for="agentName">Last Name</label>
-              <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" required>
+              <input type="text" class="form-control" id="agentLastName" name="agentLastName" placeholder="Last Name" value = "<%= locals.accounts[0].agentLastName %>" required>
             </div>
           </div>
 
           <div class="form-row">
             <div class="form-group col-12 col-md-auto">
               <label for="newPassword">Password</label>
-              <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password"  required>
+              <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Password">
             </div>
             <div class="form-group col-12 col-md-auto">
               <label for="newPasswordRetype">Re-Type Password</label>
-              <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-Type Password" required>
+              <input type="password" class="form-control" id="newPasswordRetype" name="newPasswordRetype" placeholder="Re-Type Password">
             </div>
             <div class="form-group col-12 col-md-auto">
               <label>Change Password on Login</label>
               <%
                   var changePWList = '';
-                  if(results[0].changePwOnLogin){
+                  if(locals.accounts[0].changePwOnLogin){
                   changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW" checked>';
                 }else{
                 changePWList += '<input type="checkbox" class="form-control" id="changePW" name="changePW">';
@@ -102,18 +136,36 @@
             <div class="form-group col-12 col-md-auto">
               <label for="agentPosition">Position</label>
               <select class="form-control" id="agentPosition" name="agentPosition" required>
-              <option value="" disabled selected>Select</option>
-              <option>Sales Executive</option>
-              <option>Office</option>
-              <option>Sales Manager</option>
-            </select>
+                <%
+                  var positionList = '';
+                    if(locals.accounts[0].agentPosition == "Sales Executive"){
+                      positionList += '<option selected>Sales Executive</option>';
+                      positionList += '<option>Office</option>';
+                      positionList += '<option>Sales Manager</option>';
+                    } else if (locals.accounts[0].agentPosition == "Office"){
+                      positionList += '<option>Sales Executive</option>';
+                      positionList += '<option selected>Office</option>';
+                      positionList += '<option>Sales Manager</option>';
+                    } else if (locals.accounts[0].agentPosition == "Sales Manager"){
+                      positionList += '<option>Sales Executive</option>';
+                      positionList += '<option>Office</option>';
+                      positionList += '<option selected>Sales Manager</option>';
+                    } else {
+                      positionList += '<option value="" disabled selected>Select</option>';
+                      positionList += '<option>Sales Executive</option>';
+                      positionList += '<option>Office</option>';
+                      positionList += '<option>Sales Manager</option>';
+                    }
+                %>
+                <%- positionList %>         
+              </select>
             </div>
             <div class="form-group col-12 col-md-auto">
               <label for="userStatus">Status</label>
               <select type="name" class="form-control" id="userStatus" name="userStatus"  required>
-                    <%
-                    var activeList = '';
-                    if(results[0].active){
+                <%
+                  var activeList = '';
+                    if(locals.accounts[0].active){
                     activeList += '<option selected>Enabled</option>';
                     activeList += '<option>Disabled</option>';
                   } else {
@@ -195,5 +247,18 @@
 <!-- Popper.js first, then CoreUI JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha384-L2pyEeut/H3mtgCBaUNw7KWzp5n9&#43;4pDQiExs933/5QfaTh8YStYFFkOzSoXjlTb" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/js/coreui.min.js"></script>
+ <script type="text/javascript">
+  function EnableDisableBox(newUserType) {
+      var selectedValue = newUserType.options[newUserType.selectedIndex].value;
+
+      var agentAB = document.getElementById("agentAbbrev");
+      agentAB.disabled = selectedValue == "Agent" ? false : true;
+      if (!agentAB.disabled) {
+          agentAB.blur();
+      }
+
+  }
+</script>
+
 </body>
 </html>
