--- a/CRM/views/report-activity.ejs
+++ b/CRM/views/report-activity.ejs
@@ -64,6 +64,20 @@
               </div>
             </div>
 
+    <!-- Select Activity Type from Prepopulated list of options -->
+            <div class="form-row">
+              <div class="form-group col-12 col-md-auto">
+                <label for="activityTypeSelect">ActivityType</label>
+                <select class="form-control" name="activityTypeSelect" id="activityTypeSelect">
+                  <option></option>
+                  <option>Collection</option>
+                  <option>Courtesy Visit</option>
+                  <option>Technical Service</option>
+                  <option>Delivery</option>
+                </select>
+              </div>
+            </div>            
+
     <!-- Submit Button to execute -->
             <div class="form-row">
               <div class="form-group col">
