--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -151,7 +151,13 @@
                     <div class="card-header"><strong>Clients Due for Visit</strong></div>
                     <div class="card-body">
                       <div class="table">
-                          <table data-toggle="table" data-pagination="true" data-pagination-successively-size="2" class="table table-hover table-bordered table-striped px-2 py-2">
+                          <table
+                          data-toggle="table"
+                          data-pagination="true"
+                          data-pagination-successively-size="1"
+                          data-pagination-pages-by-side="1"
+                          data-pagination-parts="['pageInfoShort', 'pageSize', 'pageList']"
+                          class="table table-hover table-bordered table-striped px-2 py-2">
                             <thead class="thead-light">
                               <tr>
                                 <th data-halign="center" data-align="left" data-width="70" data-width-unit="%">Client</th>
