Various UI Changes: View Contact - alignment of column

--- a/CRM/views/view-contact.ejs
+++ b/CRM/views/view-contact.ejs
@@ -579,7 +579,7 @@
                           } else{
                             repContact2.push(result.events[i].contact2);
                           }
-                          eventsList += '<th scope="row">' + k + '</th>';
+                          eventsList += '<th scope="row" style="text-align: center; vertical-align: middle; width: 5%">' + k + '</th>';
                           var date = result.events[i].eventTimeIn._i;
                           var str = date.toString();
                           str = str.substr(0,10);
