--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -108,6 +108,12 @@
         </li>
       <% } %>
 
+      <% if (grantEventRead == true) {%>
+        <li class="c-sidebar-nav-item">
+          <a class="c-sidebar-nav-link" href="/report-visit-due">Visit Due</a>
+        </li>
+      <% } %>
+
     </ul>
   </li>
 
