--- a/CRM/views/view-contact.ejs
+++ b/CRM/views/view-contact.ejs
@@ -550,7 +550,7 @@
                 <h4> Communication History</h4>
                 <div class="table-responsive">
                   <table class="table table-bordered px-2 py-2 bg-white">
-                    <thead class="thead-dark">
+                    <thead class="thead-light">
                       <tr>
                         <th scope="col" style="text-align: center; vertical-align: middle; width: 5%"></th>
                         <th scope="col" style="text-align: center; vertical-align: middle; width: 10%">DATE</th>
